# noesis-forge-operators

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
LEGAL/: DISCLAIMER.md
data/: toy_tasks.jsonl
docs/: overview.md
docs/whitepapers/: Prime_Factorization_Period_Finding.md  RCMO_Primer.md  Recursive_Cognition_Arc.md
examples/: run_cmo_demo.py
operators/cmo/: operator.json
operators/cmo/configs/: cmo_v7.yaml
schema/: operator.schema.json
src/noesis_forge/engine/: engine.py
src/noesis_forge/eval/: harness.py
src/noesis_forge/operators/: cmo_operator.py
